src/wrapper.zig

pub extern fn ffg2dui(fptr: [*c]fitsfile, group: c_long, nulval: c_ushort, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_ushort, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2di(fptr: [*c]fitsfile, group: c_long, nulval: c_short, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_short, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2duj(fptr: [*c]fitsfile, group: c_long, nulval: c_ulong, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_ulong, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2dj(fptr: [*c]fitsfile, group: c_long, nulval: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_long, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2dujj(fptr: [*c]fitsfile, group: c_long, nulval: ULONGLONG, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]ULONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2djj(fptr: [*c]fitsfile, group: c_long, nulval: LONGLONG, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]LONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2duk(fptr: [*c]fitsfile, group: c_long, nulval: c_uint, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_uint, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2dk(fptr: [*c]fitsfile, group: c_long, nulval: c_int, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_int, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2de(fptr: [*c]fitsfile, group: c_long, nulval: f32, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg2dd(fptr: [*c]fitsfile, group: c_long, nulval: f64, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3db(fptr: [*c]fitsfile, group: c_long, nulval: u8, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dsb(fptr: [*c]fitsfile, group: c_long, nulval: i8, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]i8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dui(fptr: [*c]fitsfile, group: c_long, nulval: c_ushort, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_ushort, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3di(fptr: [*c]fitsfile, group: c_long, nulval: c_short, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_short, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3duj(fptr: [*c]fitsfile, group: c_long, nulval: c_ulong, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_ulong, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dj(fptr: [*c]fitsfile, group: c_long, nulval: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_long, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dujj(fptr: [*c]fitsfile, group: c_long, nulval: ULONGLONG, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]ULONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3djj(fptr: [*c]fitsfile, group: c_long, nulval: LONGLONG, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]LONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3duk(fptr: [*c]fitsfile, group: c_long, nulval: c_uint, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_uint, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dk(fptr: [*c]fitsfile, group: c_long, nulval: c_int, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_int, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3de(fptr: [*c]fitsfile, group: c_long, nulval: f32, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffg3dd(fptr: [*c]fitsfile, group: c_long, nulval: f64, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvb(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: u8, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvsb(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: i8, array: [*c]i8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvui(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_ushort, array: [*c]c_ushort, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvi(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_short, array: [*c]c_short, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvuj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_ulong, array: [*c]c_ulong, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_long, array: [*c]c_long, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvujj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: ULONGLONG, array: [*c]ULONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvjj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: LONGLONG, array: [*c]LONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvuk(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_uint, array: [*c]c_uint, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvk(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: c_int, array: [*c]c_int, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsve(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: f32, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsvd(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, nulval: f64, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfb(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]u8, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfsb(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]i8, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfui(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_ushort, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfi(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_short, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfuj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_ulong, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_long, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfujj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]ULONGLONG, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfjj(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]LONGLONG, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfuk(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_uint, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfk(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]c_int, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfe(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]f32, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgsfd(fptr: [*c]fitsfile, colnum: c_int, naxis: c_int, naxes: [*c]c_long, blc: [*c]c_long, trc: [*c]c_long, inc: [*c]c_long, array: [*c]f64, flagval: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffggpb(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffggpsb(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffggpui(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffggpi(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffggpuj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffggpj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffggpujj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffggpjj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffggpuk(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffggpk(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffggpe(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffggpd(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffgcv(fptr: [*c]fitsfile, datatype: c_int, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: ?*anyopaque, array: ?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvn(fptr: [*c]fitsfile, ncols: c_int, datatype: [*c]c_int, colnum: [*c]c_int, firstrow: LONGLONG, nrows: LONGLONG, nulval: [*c]?*anyopaque, array: [*c]?*anyopaque, anynul: [*c]c_int, status: [*c]c_int) c_int;
